# MiniXLSX-cpp

./: .gitmodules  CMakeLists.txt  README.md  dllcopier.sh
.github/agents/: MiniXLSX.agent.md
assets/: empty_xlsx.xlsx
demos/: CMakeLists.txt  demo_create.cpp  demo_get_cell.cpp  demo_open_close.cpp  demo_set_style.cpp  demo_sheet_index.cpp  demo_use_wrapper.cpp
docs/: API_REFERENCE_zh.md  MiniXLSX_wrapper_zh.md
include/cc/neolux/utils/MiniXLSX/: MiniXLSX.hpp  OpenXLSXWrapper.hpp  Types.hpp  XLCell.hpp  XLCellData.hpp  XLCellPicture.hpp  XLDocument.hpp  XLDrawing.hpp  XLPictureReader.hpp  XLSheet.hpp  XLTemplate.hpp  XLWorkbook.hpp
src/: MiniXLSX.cpp  OpenXLSXWrapper.cpp  XLCell.cpp  XLCellData.cpp  XLCellPicture.cpp  XLDocument.cpp  XLDrawing.cpp  XLPictureReader.cpp  XLSheet.cpp  XLTemplate.cpp  XLWorkbook.cpp
src/tools/: XLTemplateCreator.cpp
tests/: CMakeLists.txt  test_create_file.cpp  test_framework.hpp  test_main.cpp  test_minixlsx_gtest.cpp  test_open_file.cpp  test_picture_detection.cpp  test_read_data.cpp  test_style_write_gtest.cpp
