add_executable(demo_open_close demo_open_close.cpp)
target_link_libraries(demo_open_close MiniXLSX)

add_executable(demo_create demo_create.cpp)
target_link_libraries(demo_create MiniXLSX)

add_executable(demo_get_cell demo_get_cell.cpp)
target_link_libraries(demo_get_cell MiniXLSX)

add_executable(demo_set_style demo_set_style.cpp)
target_link_libraries(demo_set_style MiniXLSX)

add_executable(demo_use_wrapper demo_use_wrapper.cpp)
target_link_libraries(demo_use_wrapper MiniXLSX OpenXLSX)

add_executable(demo_sheet_index demo_sheet_index.cpp)
target_link_libraries(demo_sheet_index MiniXLSX)